[gd_scene load_steps=3 format=3 uid="uid://b0qg3yxn61fxx"]

[ext_resource type="Script" uid="uid://dbw8navcwmyfn" path="res://scripts/map/map_node.gd" id="1_kylco"]
[ext_resource type="Texture2D" uid="uid://bqp3r58yfpd4a" path="res://assets/map/node_background.jpg" id="2_l8gir"]

[node name="MapNode" type="Control"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -40.0
offset_right = 40.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kylco")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_l8gir")
expand_mode = 1

[node name="Icon" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="VisitedOverlay" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.137255, 0.137255, 0.137255, 0.501961)

[node name="HighlightBorder" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.843137, 0, 0.501961)

[node name="FogOverlay" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.2, 0.2, 0.7)

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="Doors" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="DoorTop" type="ColorRect" parent="Doors"]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -10.0
offset_top = -3.0
offset_right = 10.0
offset_bottom = 2.0
grow_horizontal = 2
color = Color(0.6, 0.4, 0.2, 1)

[node name="DoorRight" type="ColorRect" parent="Doors"]
visible = false
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -2.0
offset_top = -10.0
offset_right = 3.0
offset_bottom = 10.0
grow_horizontal = 0
grow_vertical = 2
color = Color(0.6, 0.4, 0.2, 1)

[node name="DoorBottom" type="ColorRect" parent="Doors"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -10.0
offset_top = -2.0
offset_right = 10.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.6, 0.4, 0.2, 1)

[node name="DoorLeft" type="ColorRect" parent="Doors"]
visible = false
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -3.0
offset_top = -10.0
offset_right = 2.0
offset_bottom = 10.0
grow_vertical = 2
color = Color(0.6, 0.4, 0.2, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -35.0
offset_top = 5.0
offset_right = 35.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 12
text = "节点"
horizontal_alignment = 1
